🔥 Create mariadb Dockerfile

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,3 +1,10 @@
-FROM alpine:latest
+FROM debian:buster
 
-ENTRYPOINT [ "echo", "Hello Guys!" ]
+RUN apt-get update && \
+    apt-get install mariadb-server -y
+
+COPY ./tools/create_db.sql /tmp/create_db.sql
+
+RUN mysql start && mysql -u root < /tmp/create_db.sql
+
+CMD ["mysqld_safe"]
