--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,10 +1,10 @@
 FROM debian:buster
 
 RUN apt-get update && \
-    apt-get install mariadb-server -y
+	apt-get install mariadb-server -y
 
 COPY ./tools/create_db.sql /tmp/create_db.sql
 
-RUN mysql start && mysql -u root < /tmp/create_db.sql
+RUN service mysql start && mysql -u root < /tmp/create_db.sql
 
 CMD ["mysqld_safe"]
