🎨 Create docker-compose file

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,12 +1,9 @@
 FROM debian:buster
 
 RUN apt-get update && \
-    apt-get install wget -y && \
-    apt-get install unzip -y && \
-    apt-get install vim -y && \
-    apt-get install nano -y && \
-    apt-get install php-fpm -y && \
-    apt-get install php-curl php-gd php-intl php-mbstring php-soap php-xml php-xmlrpc php-zip -y
+	apt-get install wget -y && \
+	apt-get install unzip -y && \
+	apt-get install php-fpm php-mysql -y
 # Download the latest WordPress version available at https://wordpress.org/download/ and extract it in a directory on your server:
 RUN cd /tmp && wget https://wordpress.org/latest.zip 
 RUN mkdir -p /var/www/html && unzip -d /var/www/html/ /tmp/latest.zip 
@@ -16,4 +13,4 @@ COPY ./tools/wp-config.php  /var/www/html/wordpress/wp-config.php
 
 
 EXPOSE 9000
-CMD ["/bin/bash"]
+ENTRYPOINT exec php-fpm7.3 --nodaemonize
