--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,11 +1,26 @@
 version: '3'
 services:
-  mariadb: 
+  mariadb:
+    container_name: mariadb
     build: ./requirements/mariadb/
+    restart: always
     ports:
       - "3306:3306"
+    env_file:
+      - .env
     environment:
-      - MYSQL_ROOT_PASSWORD=ybolles
-      - MYSQL_DATABASE=ybolles
-      - MYSQL_USER=ybolles
-      - MYSQL_PASSWORD=ybolles
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=db
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+    volumes:
+      - inception_vol:/var/lib/mysql
+  wordpress:
+    build: ./requirements/wordpress/
+    restart: always
+    ports:
+      - 9000:9000
+    volumes:
+      - inception_vol:/var/www/html
+volumes:
+  inception_vol: {}
