--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -16,11 +16,26 @@ services:
     volumes:
       - inception_vol:/var/lib/mysql
   wordpress:
+    container_name: wordpress
     build: ./requirements/wordpress/
     restart: always
     ports:
       - 9000:9000
     volumes:
       - inception_vol:/var/www/html
+  nginx:
+    container_name: nginx
+    build: ./requirements/nginx/
+    restart: always
+    ports:
+      - 443:443
+    volumes:
+      - inception_vol:/var/www/html
+
 volumes:
-  inception_vol: {}
+  inception_vol:
+    driver: local
+    driver_opts:
+      device: './inception/'
+      o: bind
+      type: 'none'
