--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.6'
 services:
   mariadb:
     container_name: mariadb
@@ -6,15 +6,8 @@ services:
     restart: always
     ports:
       - "3306:3306"
-    env_file:
-      - .env
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=db
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
-    volumes:
-      - inception_vol:/var/lib/mysql
+    # volumes:
+    #   - inception_vol2:/var/lib/mysql
   wordpress:
     container_name: wordpress
     build: ./requirements/wordpress/
@@ -34,8 +27,18 @@ services:
 
 volumes:
   inception_vol:
-    driver: local
     driver_opts:
-      device: './inception/'
-      o: bind
-      type: 'none'
+        type: none
+        device: "/Users/ybolles/Desktop/zreg/wrp"
+        o: bind
+  # inception_vol2:
+  #   driver_opts:
+  #     o: bind
+  #     type: 'none'
+  #     device: Users/ybolles/Desktop/zreg/mydb
+
+# networks:
+#   default:
+#     external:
+#       name: docker_default
+#       # ipv4_address:
