✨ Create Adminer Dockerfile

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     # volumes:
     #   - mydb:/var/lib/mysql
   adminer:
-    image: adminer
+    build: ./requirements/bonus/adminer/
     depends_on:
       - mariadb
     ports:
