🔒️ Fix adminer connect issues

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -36,22 +36,5 @@ services:
     ports:
       - 8080:8080
 volumes:
-  # Wordpress: {}
-  mydb:
-    driver: local
-    driver_opts:
-      type: none
-      device: /Users/ysrbolles/Desktop/incep/db
-      o: bind
-  Wordpress:
-    driver_opts:
-      type: none
-      device: /Users/ysrbolles/Desktop/incep/wordpress
-      o: bind
-
-# networks:
-# networks:
-#   default:
-#     external:
-#       name: docker_default
-#       # ipv4_address:
+  mydb: {}
+  Wordpress: {}
