--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -54,8 +54,9 @@ services:
     build: ./requirements/bonus/redis/
     ports:
       - 6379:6379
-    volumes:
-      - Wordpress:/etc/redis
+    networks:
+      - inception_net
+    
 volumes:
   mydb:
     driver: local
