--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -3,8 +3,8 @@ FROM debian:buster
 # Installation Source https://www.digitalocean.com/community/tutorials/how-to-set-up-vsftpd-for-a-user-s-directory-on-debian-10
 
 RUN apt-get update && \
-    apt-get install vsftpd -y && \
-    apt-get install openssl -y
+	apt-get install vsftpd -y && \
+	apt-get install openssl -y
 
 COPY ./tools/start.sh start.sh
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/vsftpd.pem -out /etc/ssl/private/vsftpd.pem -subj "/C=MA/ST=KHOURIBGA/L=Kkouribga/O=1337/OU=My Department/CN=localhost:21"
@@ -16,11 +16,12 @@ RUN mkdir -p /home/ybolles/ftp
 RUN chown ybolles:ybolles /home/ybolles/ftp
 RUN chmod a-w /home/ybolles/ftp
 RUN mkdir /home/ybolles/ftp/files
-RUN chown ybolles:ybolles /home/ybolles/ftp/files
-RUN echo "vsftpd test file" | tee /home/ybolles/ftp/files/test.txt
 RUN echo "ybolles" | tee -a /etc/vsftpd.userlist
-# RUN echo "ysrbolles" | tee -a /etc/vsftpd.userlist
 COPY ./tools/vsftpd.conf /etc/vsftpd.conf
 
+
+
+EXPOSE 21
+EXPOSE 30000-30009
 
 CMD [ "vsftpd", "/etc/vsftpd.conf"]
