--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -70,16 +70,17 @@ services:
       - Wordpress:/home/ybolles/ftp
     networks:
       - inception_net
-<<<<<<< HEAD
   ###################### My Website container #####################
   website:
     container_name: website
     build: ./requirements/bonus/website
+    restart: always
     ports:
       - 3000:3000
     volumes:
       - Wordpress:/var/www/html
-=======
+    networks:
+      - inception_net
   ###################### cadvisor && backup Server container #####################
   backup:
     container_name: backup
@@ -90,7 +91,6 @@ services:
       - 7000:7000
     volumes:
       - mydb:/var/lib/mysql
->>>>>>> b2b10a7b9c31d2c25d142030687da121f8138284
     networks:
       - inception_net
 volumes:
