--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -12,6 +12,10 @@ RUN mv /var/www/html/wordpress/wp-config-sample.php  /var/www/html/wordpress/wp-
 COPY ./tools/wp-config.php  /var/www/html/wordpress/wp-config.php
 RUN sed -i 's/\/run\/php\/php7.3-fpm.sock/9000/g' /etc/php/7.3/fpm/pool.d/www.conf
 RUN sed -i 's/;clear_env = no/clear_env = no/g' /etc/php/7.3/fpm/pool.d/www.conf
+# Download redis cache and unzip it
+RUN wget https://downloads.wordpress.org/plugin/redis-cache.2.0.22.zip
+RUN unzip redis-cache.2.0.22.zip
+RUN rm -rf redis-cache.2.0.22.zip
 RUN service php7.3-fpm start
 RUN chown www-data:www-data -R /var/www/html/wordpress/
 
