--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  ###################### Database container #####################
+  #################### Database container #####################
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb/
@@ -12,7 +12,7 @@ services:
       - mydb:/var/lib/mysql
     networks:
       - inception_net
-  ###################### Wordpress container #####################
+  #################### Wordpress container #####################
   wordpress:
     container_name: wordpress
     build: ./requirements/wordpress/
@@ -26,7 +26,7 @@ services:
       - Wordpress:/var/www/html
     networks:
       - inception_net
-  ###################### Nginx container #####################
+  #################### Nginx container #####################
   nginx:
     container_name: nginx
     build: ./requirements/nginx/
@@ -40,7 +40,7 @@ services:
       - Wordpress:/var/www/html
     networks:
       - inception_net
-  ##################### Admin container #####################
+  #################### Admin container #####################
   adminer:
     container_name: adminer
     build: ./requirements/bonus/adminer/
@@ -52,7 +52,7 @@ services:
       - 8080:8080
     networks:
       - inception_net
-  ###################### Redis container #####################
+  ##################### Redis container #####################
   redis:
     container_name: redis
     build: ./requirements/bonus/redis/
@@ -62,7 +62,7 @@ services:
       - 6379:6379
     networks:
       - inception_net
-  ###################### FTP Server container #####################
+  ##################### FTP Server container #####################
   ftp:
     container_name: ftp
     build: ./requirements/bonus/ftp
@@ -77,35 +77,33 @@ services:
       - Wordpress:/home/ybolles/ftp
     networks:
       - inception_net
-  ###################### My Website container #####################
-  # website:
-  #   container_name: website
-  #   build: ./requirements/bonus/website
-  #   restart: always
-  #   env_file: .env
-  #   depends_on:
-  #     - wordpress
-  #   ports:
-  #     - 3000:3000
-  #   volumes:
-  #     - Wordpress:/var/www/html
-  #   networks:
-  #     - inception_net
-  ###################### cadvisor && backup Server container #####################
-  # backup:
-  #   container_name: backup
-  #   build: ./requirements/bonus/backup
-  #   restart: always
-  #   env_file: .env
-  #   depends_on:
-  #     - mariadb
-  #   ports:
-  #     - 7000:7000
-  #   volumes:
-  #     - mydb:/var/lib/mysql
-  #   networks:
-  #     - inception_net
-  ###################### Volumes Section #####################
+  #################### My Website container #####################
+  website:
+    container_name: website
+    build: ./requirements/bonus/website
+    restart: always
+    env_file: .env
+    depends_on:
+      - wordpress
+    ports:
+      - 3000:3000
+    networks:
+      - inception_net
+  #################### cadvisor && backup Server container #####################
+  backup:
+    container_name: backup
+    build: ./requirements/bonus/backup
+    restart: always
+    env_file: .env
+    depends_on:
+      - mariadb
+    ports:
+      - 7000:7000
+    volumes:
+      - mydb:/var/lib/mysql
+    networks:
+      - inception_net
+  #################### Volumes Section #####################
 volumes:
   mydb:
     driver: local
@@ -118,6 +116,6 @@ volumes:
       type: none
       device: /Users/ybolles/Desktop/incep/wp
       o: bind
-###################### Networks Section #####################
+#################### Networks Section #####################
 networks:
   inception_net:
