--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,7 +11,7 @@ COPY ./tools/start.sh .
 RUN cd /tmp && wget https://wordpress.org/latest.zip 
 RUN mkdir -p /var/www/html && unzip -d /var/www/html/ /tmp/latest.zip 
 RUN mv /var/www/html/wordpress/wp-config-sample.php  /var/www/html/wordpress/wp-config.php
-COPY ./tools/wp-config.php  /var/www/html/wordpress/wp-config.php
+COPY ./conf/wp-config.php  /var/www/html/wordpress/wp-config.php
 RUN sed -i 's/\/run\/php\/php7.3-fpm.sock/9000/g' /etc/php/7.3/fpm/pool.d/www.conf
 RUN sed -i 's/;clear_env = no/clear_env = no/g' /etc/php/7.3/fpm/pool.d/www.conf
 # Download redis cache and unzip it
