--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,6 +8,6 @@ COPY ./tools/create_db.sql /tmp/create_db.sql
 
 RUN service mysql start && mysql -u root < /tmp/create_db.sql
 
-COPY ./tools/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 CMD ["mysqld_safe"]
