--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -109,18 +109,18 @@ services:
       - mydb:/var/lib/mysql
     networks:
       - inception_net
-  #################### Volumes Section #####################
+  #################### Volumes Section /Users/ybolles/Desktop/incep/db #####################
 volumes:
   mydb:
     driver: local
     driver_opts:
       type: none
-      device: /Users/ybolles/Desktop/incep/db
+      device: /home/ybolles/data/db
       o: bind
   Wordpress:
     driver_opts:
       type: none
-      device: /Users/ybolles/Desktop/incep/wp
+      device: /home/ybolles/data/wp
       o: bind
 #################### Networks Section #####################
 networks:
